Startup.cs refactoring

--- a/WebChat_React/index.html
+++ b/WebChat_React/index.html
@@ -38,8 +38,8 @@
         //const res = await fetch('https://webchat-mockbot.azurewebsites.net/directline/token', { method: 'POST' });
 		
 		var user = {
-            id: 'Marekk',
-            name: 'Marekk'
+            id: 'Marek L',
+            name: 'Marek L'
         };
 		
 		const res = await fetch('http://localhost:3978/api/directline/token', { 
